--- a/mci-content.html
+++ b/mci-content.html
@@ -28,10 +28,10 @@
   <div class="section wf-section">
     <div>
       <div class="w-embed"><video id="video1" data-able-player="" preload="auto" width="480" height="360" poster="path_to_image.jpg">
-          <source type="video/webm" src="path_to_video.webm" data-desc-src="path_to_described_video.webm">
-          <source type="video/mp4" src="path_to_video.mp4" data-desc-src="https://youtu.be/MPk7nCMhuyc">
-          <track kind="captions" src="path_to_captions.vtt">
-          <track kind="descriptions" src="path_to_descriptions.vtt">
+  <!--<source type="video/webm" src="path_to_video.webm" data-desc-src="path_to_described_video.webm">-->
+          <source type="video/mp4" src="https://youtu.be/MPk7nCMhuyc" data-desc-src="https://youtu.be/MPk7nCMhuyc">
+          <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt">
+  <!--<track kind="descriptions" src="path_to_descriptions.vtt">-->
         </video></div>
     </div>
   </div>
