--- a/mci-content.html
+++ b/mci-content.html
@@ -29,8 +29,8 @@
     <div>
       <div class="w-embed"><video id="video1" data-able-player="" preload="auto" width="568" height="320" poster="https://uploads-ssl.webflow.com/61b374e96dc443e690d2f92d/62433184fd9be5ee7a84deb4_27_03.jpg">
   <!--<source type="video/webm" src="path_to_video.webm" data-desc-src="path_to_described_video.webm">-->
-          <source type="video/mp4" src="https://github.com/alfreditog/mci/blob/main/media/deadline.mp4" data-desc-src="https://github.com/alfreditog/mci/blob/main/media/deadline.mp4">
-          <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/deadline_captions_en.vtt">
+          <source type="video/mp4" src="media/deadline.mp4" data-desc-src="media/deadline.mp4">
+          <track kind="captions" src="media/deadline_captions_en.vtt">
   <!--<track kind="descriptions" src="path_to_descriptions.vtt">-->
         </video></div>
     </div>
