--- a/mci-content.html
+++ b/mci-content.html
@@ -27,9 +27,9 @@
 <body class="body">
   <div class="section wf-section">
     <div>
-      <div class="w-embed"><video id="video1" data-able-player="" preload="auto" width="568" height="320" poster="https://uploads-ssl.webflow.com/61b374e96dc443e690d2f92d/62433184fd9be5ee7a84deb4_27_03.jpg">
+      <div class="w-embed"><video id="video1" data-able-player="" preload="auto" width="854" height="480" poster="https://uploads-ssl.webflow.com/61b374e96dc443e690d2f92d/62433184fd9be5ee7a84deb4_27_03.jpg">
   <!--<source type="video/webm" src="path_to_video.webm" data-desc-src="path_to_described_video.webm">-->
-          <source type="video/mp4" src="media/Helene.mp4" data-desc-src="media/Helene.mp4">
+          <source type="video/mp4" src="https://github.com/alfreditog/mci/blob/main/media/Helene.mp4" data-desc-src="https://github.com/alfreditog/mci/blob/main/media/Helene.mp4">
           <track kind="captions" src="media/helene.vtt">
   <!--<track kind="descriptions" src="path_to_descriptions.vtt">-->
         </video></div>
