--- a/mci-content.html
+++ b/mci-content.html
@@ -32,7 +32,7 @@
 		data-skin="2020" preload="auto" 
 		data-youtube-id="MPk7nCMhuyc" data-youtube-desc-id="AIzaSyCGnBo9nLIYSl7mE_E0HenpIrUxQaFf7mg">
 <!--<track kind="captions" src="../media/itaccess_captions_en.vtt" srclang="en" label="English"/>-->
-		<track kind="subtitles" src="media/helene.vtt" srclang="es" label="Español"/>
+		<track kind="subtitles" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
 <!--<track kind="chapters" src="../media/itaccess_chapters_en.vtt" srclang="en"/>-->
 	</video>
         
