--- a/mci-content.html
+++ b/mci-content.html
@@ -28,13 +28,22 @@
   <div class="section wf-section">
     <div>
       <div class="w-embed">
-        	<video id="video1" data-able-player 
-		data-skin="2020" preload="auto" 
-		data-youtube-id="MPk7nCMhuyc" data-youtube-desc-id="AIzaSyCGnBo9nLIYSl7mE_E0HenpIrUxQaFf7mg">
-<!--<track kind="captions" src="../media/itaccess_captions_en.vtt" srclang="en" label="English"/>-->
-		<track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
-<!--<track kind="chapters" src="../media/itaccess_chapters_en.vtt" srclang="en"/>-->
-	</video>
+<video data-able-player
+            data-skin="2020"
+            id="video1"
+            width="854"
+            height="480"
+            preload="auto"
+            data-youtube-id="MPk7nCMhuyc"
+            data-youtube-desc-id="Ck2TdVMhWcU"
+            data-transcript-div="transcript"
+            data-transcript-title=""
+            data-include-transcript="false"
+            playsinline
+        >
+            <track kind="captions" src="../media/itaccess_captions_en.vtt" srclang="en" label="English"/>
+            <track kind="subtitles" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
+        </video>
         
      </div>
     </div>
