--- a/mci-content.html
+++ b/mci-content.html
@@ -41,7 +41,7 @@
             data-include-transcript="false"
             playsinline
         >
-            <track kind="captions" src="../media/itaccess_captions_en.vtt" srclang="en" label="English"/>
+            <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
             <track kind="subtitles" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
         </video>
         
