--- a/mci-content.html
+++ b/mci-content.html
@@ -28,19 +28,22 @@
   <div class="section wf-section">
     <div>
       <div class="w-embed">
-<video data-able-player
-            data-skin="2020"
-            id="video1"
-            width="854"
-            height="480"
-            preload="auto"
-            data-youtube-id="MPk7nCMhuyc"
-            data-youtube-desc-id="Ck2TdVMhWcU"
-            data-transcript-div="transcript"
-            data-transcript-title=""
-            data-include-transcript="false"
-            playsinline
-        >
+		<video data-able-player
+			data-skin="2020"
+			id="video1"
+			width="854"
+			height="480"
+			preload="auto"
+			data-youtube-id="MPk7nCMhuyc"
+			data-youtube-desc-id="MPk7nCMhuyc"
+			data-transcript-div="transcript"
+			data-transcript-title=""
+			data-chapters-div="chapters"
+			data-chapters-title="" 
+			data-use-chapters-button="false"
+			data-include-transcript="false"
+			playsinline
+		>
             <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
             <track kind="subtitles" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
         </video>
