--- a/mci-content.html
+++ b/mci-content.html
@@ -41,7 +41,7 @@
 			data-chapters-div="chapters"
 			data-chapters-title="" 
 			data-use-chapters-button="false"
-			data-include-transcript="false"
+			data-include-transcript="true"
 			playsinline
 		>
             <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
