--- a/mci-content.html
+++ b/mci-content.html
@@ -23,6 +23,15 @@
   <link rel="stylesheet" href="build/ableplayer.min.css" type="text/css">
   <!--  JavaScript  -->
   <script src="build/ableplayer.min.js"></script>
+	<!-- Dependencies -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+<script src="../thirdparty/js.cookie.js"></script>
+
+<!-- Able Player CSS -->
+<link rel="stylesheet" href="../build/ableplayer.min.css" type="text/css"/>
+
+<!-- Able Player JavaScript -->
+<script src="../build/ableplayer.js"></script>
 </head>
 <body class="body">
   <div class="section wf-section">
