--- a/mci-content.html
+++ b/mci-content.html
@@ -23,41 +23,16 @@
   <link rel="stylesheet" href="build/ableplayer.min.css" type="text/css">
   <!--  JavaScript  -->
   <script src="build/ableplayer.min.js"></script>
-	<!-- Dependencies -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-<script src="../thirdparty/js.cookie.js"></script>
-
-<!-- Able Player CSS -->
-<link rel="stylesheet" href="../build/ableplayer.min.css" type="text/css"/>
-
-<!-- Able Player JavaScript -->
-<script src="../build/ableplayer.js"></script>
 </head>
 <body class="body">
   <div class="section wf-section">
     <div>
-      <div class="w-embed">
-		<video data-able-player
-			data-skin="2020"
-			id="video1"
-			width="854"
-			height="480"
-			preload="auto"
-			data-youtube-id="MPk7nCMhuyc"
-			data-youtube-desc-id="MPk7nCMhuyc"
-			data-transcript-div="transcript"
-			data-transcript-title=""
-			data-chapters-div="chapters"
-			data-chapters-title="" 
-			data-use-chapters-button="false"
-			data-include-transcript="true"
-			playsinline
-		>
-            <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
-            <track kind="subtitles" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
-        </video>
-        
-     </div>
+      <div class="w-embed"><video id="video1" data-able-player="" preload="auto" width="480" height="360" poster="path_to_image.jpg">
+  <!--<source type="video/webm" src="path_to_video.webm" data-desc-src="path_to_described_video.webm">-->
+          <source type="video/mp4" src="https://youtu.be/MPk7nCMhuyc" data-desc-src="https://youtu.be/MPk7nCMhuyc">
+          <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt">
+  <!--<track kind="descriptions" src="path_to_descriptions.vtt">-->
+        </video></div>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61b374e96dc443e690d2f92d" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
