--- a/mci-content.html
+++ b/mci-content.html
@@ -16,43 +16,29 @@
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"><!--  Dependencies  -->
+  <link href="images/webclip.png" rel="apple-touch-icon">
+
+  <!--  Dependencies  -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
   <!--  CSS  -->
   <link rel="stylesheet" href="build/ableplayer.min.css" type="text/css">
   <!--  JavaScript  -->
   <script src="build/ableplayer.min.js"></script>
+
 </head>
 <body class="body">
   <div class="section wf-section">
     <div>
       <div class="w-embed">
-
-  <section id="player" aria-label="Video player">
-    <video data-able-player
-      data-skin="2020"
-      id="video1"
-      width="854"
-      height="480"
-      preload="auto"
-      data-youtube-id="MPk7nCMhuyc"
-      data-youtube-desc-id="MPk7nCMhuyc"
-      data-transcript-div="transcript"
-      data-transcript-title=""
-      data-chapters-div="chapters"
-      data-chapters-title="" 
-      data-use-chapters-button="false"
-      data-include-transcript="false"
-      playsinline
-    >
-<!--       <track kind="captions" src="../media/itaccess_captions_en.vtt" srclang="en" label="English"/> -->
-      <track kind="subtitles" src="/media/helene.vtt" srclang="es" label="Español"/>
-<!--       <track kind="subtitles" src="../media/itaccess_subtitles_zh-cn.vtt" srclang="zh-cn" label="中文(中华人民共和国)"/>
-      <track kind="chapters" src="../media/itaccess_chapters_en.vtt" srclang="en" label="Speakers"/> -->
-    </video>
-  </section>
-  
+<video id="video1" data-able-player 
+    data-skin="2020" preload="auto" 
+    data-youtube-id="MPk7nCMhuyc" data-youtube-desc-id="MPk7nCMhuyc">
+    <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
+    <track kind="subtitles" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
+<!--     <track kind="subtitles" src="../media/itaccess_subtitles_zh-cn.vtt" srclang="zh-cn" label="中文(中华人民共和国)"/>
+    <track kind="chapters" src="../media/itaccess_chapters_en.vtt" srclang="en"/> -->
+  </video>
 
       </div>
     </div>
