--- a/mci-content.html
+++ b/mci-content.html
@@ -32,14 +32,13 @@
     <div>
       <div class="w-embed">
 <video id="video1" data-able-player 
-    data-skin="2020" preload="auto" 
+    data-skin="2022" preload="auto" 
     data-youtube-id="MPk7nCMhuyc" data-youtube-desc-id="MPk7nCMhuyc">
     <track kind="captions" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
-    <track kind="subtitles" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
-<!--     <track kind="subtitles" src="../media/itaccess_subtitles_zh-cn.vtt" srclang="zh-cn" label="中文(中华人民共和国)"/>
+<!--<track kind="subtitles" src="https://github.com/alfreditog/mci/blob/main/media/helene.vtt" srclang="es" label="Español"/>
+    <track kind="subtitles" src="../media/itaccess_subtitles_zh-cn.vtt" srclang="zh-cn" label="中文(中华人民共和国)"/>
     <track kind="chapters" src="../media/itaccess_chapters_en.vtt" srclang="en"/> -->
   </video>
-
       </div>
     </div>
   </div>
