--- a/test.html
+++ b/test.html
@@ -47,7 +47,7 @@
 		<track kind="captions" src="../media/itaccess_captions_en.vtt" srclang="en" label="English"/>
 		<track kind="subtitles" src="../media/helene.vtt" srclang="es" label="Español"/>
 		<track kind="subtitles" src="../media/itaccess_subtitles_zh-cn.vtt" srclang="zh-cn" label="中文(中华人民共和国)"/>
-		<track kind="chapters" src="../media/itaccess_chapters_en.vtt" srclang="en"/>
+		<track kind="chapters" src="../media/itaccess_chapters_fr.vtt" srclang="fr"/>
 	</video>
 </div>
 
