--- a/test.html
+++ b/test.html
@@ -44,9 +44,9 @@
 	<video id="video1" data-able-player 
 		data-skin="2020" preload="auto" 
 		data-youtube-id="MPk7nCMhuyc" data-youtube-desc-id="MPk7nCMhuyc">
-		<track kind="captions" src="../media/itaccess_captions_en.vtt" srclang="en" label="English"/>
+		<track kind="captions" src="../media/helene.vtt" srclang="en" label="English"/>
 		<track kind="subtitles" src="../media/helene.vtt" srclang="es" label="Español"/>
-		<track kind="subtitles" src="../media/itaccess_subtitles_zh-cn.vtt" srclang="zh-cn" label="中文(中华人民共和国)"/>
+		<track kind="subtitles" src="../media/helene.vtt" srclang="fr" label="Français"/>
 		<track kind="chapters" src="../media/itaccess_chapters_fr.vtt" srclang="fr"/>
 	</video>
 </div>
